# pizza-store

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 04e3ef5525f6_init_users_table.py  32228672c72b_create_orders_and_order_items_tables.py  4955950b22e2_add_ingredient_and_pizza_ingredients_.py  980852566f50_change_pizza_price_to_int.py  a4ec0f8ac43c_add_user_sessions_table.py  b86a01ecde85_add_payment_fields_to_user_and_order.py  df6cdfe98fc7_create_pizzas_table.py  fe0d7682af8c_init_users_table.py
backend/src/: main.py
backend/src/core/: config.py  database.py  dependencies.py  init_db.py  redis.py  security.py  seed.py
backend/src/models/: __init__.py  ingredient.py  order.py  pizza.py  session.py  user.py
backend/src/payments/: base.py  router.py  schemas.py  yookassa.py
backend/src/routers/: admin.py  auth.py  menu.py  order.py
backend/src/schemas/: order.py  pizza.py  user.py
backend/src/seeds/: seed_users.py
backend/src/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_order_status.py  test_orders.py
frontend/: .prettierignore  .prettierrc  Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: index.js
frontend/src/components/common/: AnimatedNumber.jsx  CartSheet.jsx  Header.jsx  PizzaCard.jsx  ProtectedRoute.jsx
frontend/src/components/pages/: Login.jsx  MenuSection.jsx
frontend/src/components/ui/: NoticeBanner.jsx
frontend/src/core/: api.js
frontend/src/pages/: AdminPage.jsx  CheckoutPage.jsx  LoginPage.jsx  ManagerOrdersPage.jsx  PaymentSuccessPage.jsx  ProfilePage.jsx  RegisterPage.jsx
frontend/src/store/: useAuthStore.js  useCartStore.js
