[tool.poetry]
name = "pizza-store-backend"
version = "0.1.0"
description = "Бэкенд проекта пиццерии"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.18.4"
annotated-doc = "0.0.4"
annotated-types = "0.7.0"
anyio = "4.13.0"
ast-serialize = "0.5.0"
asyncpg = "0.31.0"
bcrypt = "5.0.0"
certifi = "2026.5.20"
click = "8.4.1"
colorama = "0.4.6"
dnspython = "2.8.0"
email-validator = "2.3.0"
fastapi = "0.136.3"
greenlet = "3.5.1"
h11 = "0.16.0"
httptools = "0.8.0"
idna = "3.17"
librt = "0.11.0"
mako = "1.3.12"
markupsafe = "3.0.3"
mypy = "2.1.0"
mypy-extensions = "1.1.0"
pathspec = "1.1.1"
psycopg = "3.3.4"
psycopg-binary = "3.3.4"
pydantic = "2.13.4"
pydantic-settings = "2.14.1"
pydantic-core = "2.46.4"
pyjwt = "2.13.0"
python-dotenv = "1.2.2"
pyyaml = "6.0.3"
sentry-sdk = "2.61.0"
sqlalchemy = "2.0.50"
starlette = "1.2.0"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
tzdata = "2026.2"
urllib3 = "2.7.0"
uvicorn = "0.48.0"
watchfiles = "1.2.0"
websockets = "16.0"
python-multipart = "^0.0.32"
redis = "^8.0.0"
celery = "^5.6.3"
yookassa = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["F401", "I001"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90"]
ignore = ["B008"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
strict = false
ignore_missing_imports = true
mypy_path = "."
explicit_package_bases = true
disable_error_code = ["import-untyped"]
namespace_packages = true


[[tool.mypy.overrides]]
module = "sentry_sdk"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentry_sdk.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]